第三次修改

--- a/AllTheMovies.html
+++ b/AllTheMovies.html
@@ -22,6 +22,5 @@
     <script src="assets/js/jquery.mobile.custom.js"></script>
 </head>
 <body>
-    ggg 
-    </body>
+    ggg À„ «   </body>
 </html>
