第四次修改

--- a/AllTheMovies.html
+++ b/AllTheMovies.html
@@ -22,9 +22,7 @@
     <script src="assets/js/jquery.mobile.custom.js"></script>
 </head>
 <body>
-<<<<<<< HEAD
-    ggg ËãÊÇ   </body>
-=======
+</body>
 <a></a>
     
     </body>
