--- a/AllTheMovies.html
+++ b/AllTheMovies.html
@@ -12,7 +12,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
-    <title>喜鹊电影票首页</title>
+    <title>全部电影</title>
     <link href="assets/css/normalize.css" rel="stylesheet" />
     <link href="assets/css/app.css" rel="stylesheet" />
     <link href="assets/css/layout.css" rel="stylesheet" />
@@ -41,7 +41,7 @@
             <div class="right pull-right show"></div>
         </div>
 
-
+  
 
     </div>
     <script>
